# SPyH-FluidSim

./: .gitignore  Attributes.py  Calculation.py  Illustration.py  LICENSE.txt  README.md  Simulation.py  damnbreak_example.py  gui.py  illustration.py  main.py  neighbor_search.py  pyproject.toml  simulation_backend.py  test.py
examples/: water_drop.ipynb
spyh/: Attributes.py  Calculation.py  KernelFunc.py  ParticleInit.py  Simulation.py  __init__.py
